# datus-scheduler-adapters

./: .gitignore  README.md  pyproject.toml
.github/workflows/: adapter-ci.yml  package-release-readiness.yml  prepare-package-release-pr.yml
ci/: check_package_release_readiness.py  package_release.py  prepare_package_release.py  required-checks.md  run-integration-tests.sh  run-unit-tests.sh
datus-scheduler-airflow/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
datus-scheduler-airflow/datus_scheduler_airflow/: __init__.py  adapter.py  config.py  dag_template.py
datus-scheduler-airflow/tests/: test_unit.py
datus-scheduler-airflow/tests/integration/: .env.example  Dockerfile  conftest.py  docker-compose.yml  test_integration.py
datus-scheduler-core/: README.md  pyproject.toml
datus-scheduler-core/datus_scheduler_core/: __init__.py  base.py  config.py  exceptions.py  models.py  registry.py
