[project]
name = "datus-scheduler-core"
version = "0.1.0"
description = "Core scheduler abstractions for Datus scheduler adapters"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [
    {name = "DatusAI", email = "support@datus.ai"}
]
keywords = ["datus", "scheduler", "adapter", "core"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/Datus-ai/datus-scheduler-adapters"
Repository = "https://github.com/Datus-ai/datus-scheduler-adapters"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["datus_scheduler_core"]
